[tool.poetry]
name = "coursework4"
version = "0.1.0"
description = ""
authors = ["Ekaterina Pavlova <miss.kat.katerina2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
